# file-folder-organizer

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.sandbox  LICENSE  README.md  app.py  batch_dialog.py  config.json  debug_test.py  ml_organizer.py  organizer.py  pyproject.toml  recent.json  requirements.txt  run.sh  run_app.py  screenshot.py  screenshot_verify.py  settings_dialog.py  settings_dialog_ctk.py  setup.bat  setup.sh  themes.py  ui_components.py  ui_utils.py
.github/workflows/: ci.yml  release.yml
config/: stats.json
scripts/: docker_sandbox.sh  prepare_sandbox.py  run_local_cli.sh  test_cli.py
src/pro_file_organizer/core/: __init__.py  constants.py  logger.py  ml_organizer.py  organizer.py  watcher.py
src/pro_file_organizer/ui/: main_window.py  main_window_controller.py  ui_utils.py
src/pro_file_organizer/ui/components/: ui_components.py
src/pro_file_organizer/ui/dialogs/: batch_dialog.py  batch_dialog_ctk.py  settings_dialog.py  settings_dialog_ctk.py
src/pro_file_organizer/ui/themes/: themes.py
tests/: __init__.py  test_app.py  test_batch_dialog.py  test_log_feedback_flow.py  test_main_window.py  test_main_window_controller.py  test_ml_organizer.py  test_organizer.py  test_organizer_extended.py  test_settings_dialog.py  test_startup_regression.py  test_themes.py  test_ui_components.py  test_ui_utils.py  test_validation.py  test_watcher.py  ui_test_utils.py
