[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pro-file-organizer"
version = "0.1.0"
description = "A powerful and intelligent file organization tool with AI-powered categorization."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Tazztone"}
]
dependencies = [
    "customtkinter>=5.2.2",
    "tkinterdnd2>=0.3.0",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
ml = [
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "pillow>=10.0.0",
    "sentence-transformers>=3.0.0",
    "scipy>=1.10.0",
    "numpy>=1.24.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "scikit-learn>=1.2.0",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E701", "E741"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "E402", "E701"]

[project.scripts]
pro-file-organizer = "pro_file_organizer.ui.main_window:main"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "coverage>=7.6.1",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90
